{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 35,
  "lineage": "273e184a-6ac3-34b1-0366-34b059fef3c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "grippo_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05284a93ad7fcf297",
            "arn": "arn:aws:ec2:eu-central-1:183631307955:elastic-ip/eipalloc-05284a93ad7fcf297",
            "domain": "vpc",
            "id": "eipalloc-05284a93ad7fcf297",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-176-157-60.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.176.157.60",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rds_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0084a47cc718c111a",
            "arn": "arn:aws:ec2:eu-central-1:183631307955:instance/i-07f6b9ed37e5c27e9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f6b9ed37e5c27e9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mse-svh105",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00acc2dca4615351a",
            "private_dns": "ip-10-150-30-185.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.150.30.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04ded6e76a7fb64ef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b1a0d4a5216a574",
            "tags": {
              "Name": "Grippo-rds-instance-1"
            },
            "tags_all": {
              "Name": "Grippo-rds-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-079a23513a756fa2b"
            ]
          },
          "dependencies": [
            "aws_subnet.grippo_private_subnet_1",
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rds_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0084a47cc718c111a",
            "arn": "arn:aws:ec2:eu-central-1:183631307955:instance/i-0ce7eb996f8fc4fed",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce7eb996f8fc4fed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mse-svh105",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0901e4b8a9b226540",
            "private_dns": "ip-10-150-40-90.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.150.40.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-026fd7194ad79adfc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0035b00702fbfe0a8",
            "tags": {
              "Name": "Grippo-rds-instance-2"
            },
            "tags_all": {
              "Name": "Grippo-rds-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-079a23513a756fa2b"
            ]
          },
          "dependencies": [
            "aws_subnet.grippo_private_subnet_2",
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0084a47cc718c111a",
            "arn": "arn:aws:ec2:eu-central-1:183631307955:instance/i-0b66e35fad1522d97",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b66e35fad1522d97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mse-svh105",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07e30378d28a5f49e",
            "private_dns": "ip-10-150-10-159.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.150.10.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04156d18386605d99",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7aadb97b5e0ae38",
            "tags": {
              "Name": "Grippo-Web-Instance-1"
            },
            "tags_all": {
              "Name": "Grippo-Web-Instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04012d84417aaa63d"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.grippo_public_subnet_1",
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0084a47cc718c111a",
            "arn": "arn:aws:ec2:eu-central-1:183631307955:instance/i-0d0d9b8c534fbbc80",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0d9b8c534fbbc80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mse-svh105",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bf76760ef6c01e30",
            "private_dns": "ip-10-150-20-244.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.150.20.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05900bdab9cb130cd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0828ab95a4c5dfe02",
            "tags": {
              "Name": "Grippo-Web-Instance-2"
            },
            "tags_all": {
              "Name": "Grippo-Web-Instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04012d84417aaa63d"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.grippo_public_subnet_2",
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "grippo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:183631307955:internet-gateway/igw-0e846efb5106e5f4f",
            "id": "igw-0e846efb5106e5f4f",
            "owner_id": "183631307955",
            "tags": {
              "Name": "Grippo-IGW"
            },
            "tags_all": {
              "Name": "Grippo-IGW"
            },
            "vpc_id": "vpc-03abdfae316c3e7e5"
          },
          "dependencies": [
            "aws_vpc.grippo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "grippo_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05284a93ad7fcf297",
            "association_id": "eipassoc-0bb5a614f492963a1",
            "connectivity_type": "public",
            "id": "nat-0d8d2fe9963eda047",
            "network_interface_id": "eni-029ad431d8d4db682",
            "private_ip": "10.150.10.97",
            "public_ip": "63.176.157.60",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c7aadb97b5e0ae38",
            "tags": {
              "Name": "Grippo-NAT"
            },
            "tags_all": {
              "Name": "Grippo-NAT"
            }
          },
          "dependencies": [
            "aws_eip.grippo_eip",
            "aws_subnet.grippo_public_subnet_1",
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "grippo_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:183631307955:route-table/rtb-0a9ee05eb5a23ed04",
            "id": "rtb-0a9ee05eb5a23ed04",
            "owner_id": "183631307955",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8d2fe9963eda047",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route-Grippo"
            },
            "tags_all": {
              "Name": "Private-Route-Grippo"
            },
            "timeouts": null,
            "vpc_id": "vpc-03abdfae316c3e7e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.grippo_eip",
            "aws_nat_gateway.grippo_nat",
            "aws_subnet.grippo_public_subnet_1",
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "grippo_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:183631307955:route-table/rtb-0595f00d406beb5af",
            "id": "rtb-0595f00d406beb5af",
            "owner_id": "183631307955",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e846efb5106e5f4f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Grippo"
            },
            "tags_all": {
              "Name": "Public-Route-Grippo"
            },
            "timeouts": null,
            "vpc_id": "vpc-03abdfae316c3e7e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.grippo_igw",
            "aws_vpc.grippo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0433c5a3b11306f2b",
            "route_table_id": "rtb-0a9ee05eb5a23ed04",
            "subnet_id": "subnet-05b1a0d4a5216a574"
          },
          "dependencies": [
            "aws_eip.grippo_eip",
            "aws_nat_gateway.grippo_nat",
            "aws_route_table.grippo_private_route",
            "aws_subnet.grippo_private_subnet_1",
            "aws_subnet.grippo_public_subnet_1",
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064275b306ca69de9",
            "route_table_id": "rtb-0a9ee05eb5a23ed04",
            "subnet_id": "subnet-0035b00702fbfe0a8"
          },
          "dependencies": [
            "aws_eip.grippo_eip",
            "aws_nat_gateway.grippo_nat",
            "aws_route_table.grippo_private_route",
            "aws_subnet.grippo_private_subnet_2",
            "aws_subnet.grippo_public_subnet_1",
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a8a771a9c609cd8",
            "route_table_id": "rtb-0595f00d406beb5af",
            "subnet_id": "subnet-0c7aadb97b5e0ae38"
          },
          "dependencies": [
            "aws_internet_gateway.grippo_igw",
            "aws_route_table.grippo_public_route",
            "aws_subnet.grippo_public_subnet_1",
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f3960dffeba3c6d",
            "route_table_id": "rtb-0595f00d406beb5af",
            "subnet_id": "subnet-0828ab95a4c5dfe02"
          },
          "dependencies": [
            "aws_internet_gateway.grippo_igw",
            "aws_route_table.grippo_public_route",
            "aws_subnet.grippo_public_subnet_2",
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:183631307955:security-group/sg-07c8e452e841bd014",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c8e452e841bd014",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.150.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20241122171506141300000001",
            "name_prefix": "terraform-",
            "owner_id": "183631307955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private-SG-Grippo"
            },
            "tags_all": {
              "Name": "Private-SG-Grippo"
            },
            "timeouts": null,
            "vpc_id": "vpc-03abdfae316c3e7e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.grippo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:183631307955:security-group/sg-04012d84417aaa63d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04012d84417aaa63d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241122171506141900000002",
            "name_prefix": "terraform-",
            "owner_id": "183631307955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public-SG-Grippo"
            },
            "tags_all": {
              "Name": "Public-SG-Grippo"
            },
            "timeouts": null,
            "vpc_id": "vpc-03abdfae316c3e7e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.grippo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "grippo_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:183631307955:subnet/subnet-05b1a0d4a5216a574",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.150.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b1a0d4a5216a574",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631307955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Grippo-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Grippo-Private-Subnet-1"
            },
            "vpc_id": "vpc-03abdfae316c3e7e5"
          },
          "dependencies": [
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "grippo_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:183631307955:subnet/subnet-0035b00702fbfe0a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.150.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0035b00702fbfe0a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631307955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Grippo-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Grippo-Private-Subnet-2"
            },
            "vpc_id": "vpc-03abdfae316c3e7e5"
          },
          "dependencies": [
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "grippo_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:183631307955:subnet/subnet-0c7aadb97b5e0ae38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.150.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7aadb97b5e0ae38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631307955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Grippo-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Grippo-Public-Subnet-1"
            },
            "vpc_id": "vpc-03abdfae316c3e7e5"
          },
          "dependencies": [
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "grippo_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:183631307955:subnet/subnet-0828ab95a4c5dfe02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.150.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0828ab95a4c5dfe02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631307955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Grippo-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Grippo-Public-Subnet-2"
            },
            "vpc_id": "vpc-03abdfae316c3e7e5"
          },
          "dependencies": [
            "aws_vpc.grippo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "grippo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:183631307955:vpc/vpc-03abdfae316c3e7e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.150.0.0/16",
            "default_network_acl_id": "acl-0f3293e586cc16ac5",
            "default_route_table_id": "rtb-0c7d2bfbb45b2ac84",
            "default_security_group_id": "sg-079a23513a756fa2b",
            "dhcp_options_id": "dopt-08f937e42c1babbbd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03abdfae316c3e7e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7d2bfbb45b2ac84",
            "owner_id": "183631307955",
            "tags": {
              "Environment": "Development",
              "Name": "Grippo-vpc"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Grippo-vpc"
            }
          }
        }
      ]
    }
  ]
}